--- a/pkg/vignettes/lmSubsets.Rnw
+++ b/pkg/vignettes/lmSubsets.Rnw
@@ -111,7 +111,7 @@
   University of Oviedo\\
   33600 Mieres, Spain\\
   E-mail: \email{marc.hofmann@gmail.com}, \email{marc.indurot@uniovi.es}\\
-  URL: \url{http://www.indurot.uniovi.es/}
+  URL: \url{https://www.indurot.uniovi.es/}
 }
 
 %====================================================================%
