--- a/pkg/vignettes/lmSubsets.bib
+++ b/pkg/vignettes/lmSubsets.bib
@@ -203,7 +203,7 @@
   volume  = "8",
   number  = "1",
   pages   = "173--181",
-  url     = "https://journal.R-project.org/archive/2016-1/messner-mayr-zeileis.pdf"
+  url     = "https://journal.r-project.org/articles/RJ-2016-012/"
 }
 
 
